docs: slim AGENTS.md/CLAUDE.md to delegation stubs
Reduce duplication by making each AGENTS.md a thin pointer to the
project-level AGENTS.md, with Claude Code compatibility entries only
in the relevant paths. Net -1027 / +147 lines across 6 files.

Co-Authored-By: Claude <noreply@anthropic.com>